--- a/accessibility.html
+++ b/accessibility.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - Elementsian Government</title>
+    <title>Accessibility - Elementsian Government</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="loader.css">
     <link rel="stylesheet" href="footer.css">
@@ -100,24 +100,19 @@
         </nav>
 
         <div class="page-content">
-            <h1>Privacy Policy</h1>
-            <p>Welcome to our Privacy Policy page. Here we explain how we collect, use, and protect your information.</p>
-            <h2><i class="fas fa-user-secret"></i> Information We Collect</h2>
+            <h1>Accessibility</h1>
+            <p>We are committed to making our website accessible to everyone, including people with disabilities.</p>
+            <h2><i class="fas fa-universal-access"></i> Standards Compliance</h2>
+            <p>Our website strives to conform to the Web Content Accessibility Guidelines (WCAG) 2.1, Level AA.</p>
+            <h2><i class="fas fa-tools"></i> Features for Accessibility</h2>
             <ul>
-                <li><i class="fas fa-id-badge"></i> Personal identification information (Name, email address, phone number, etc.)</li>
-                <li><i class="fas fa-chart-line"></i> Usage data (pages visited, time spent on the site, etc.)</li>
+                <li><i class="fas fa-keyboard"></i> Keyboard navigable menus</li>
+                <li><i class="fas fa-image"></i> Alt text for images</li>
+                <li><i class="fas fa-heading"></i> Proper use of headings</li>
+                <li><i class="fas fa-adjust"></i> Contrast ratio for readability</li>
             </ul>
-            <h2><i class="fas fa-cogs"></i> How We Use Your Information</h2>
-            <ul>
-                <li><i class="fas fa-cogs"></i> To provide and maintain our services</li>
-                <li><i class="fas fa-bell"></i> To notify you about changes to our services</li>
-                <li><i class="fas fa-headset"></i> To provide customer support</li>
-                <li><i class="fas fa-chart-pie"></i> To gather analysis or valuable information to improve our services</li>
-            </ul>
-            <h2><i class="fas fa-shield-alt"></i> Security of Your Information</h2>
-            <p>We value your trust in providing us your Personal Information, thus we strive to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and we cannot guarantee its absolute security.</p>
-            <h2><i class="fas fa-comments"></i> Contact Us</h2>
-            <p>If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at <a href="mailto:info@elementsia.gov"><i class="fas fa-envelope"></i> info@elementsia.gov</a>.</p>
+            <h2><i class="fas fa-comments"></i> Feedback</h2>
+            <p>If you have any feedback or suggestions on how we can improve the accessibility of our website, please contact us at <a href="mailto:info@elementsia.gov"><i class="fas fa-envelope"></i> info@elementsia.gov</a>.</p>
         </div>
 
         <footer class="site-footer">
