--- a/terms.html
+++ b/terms.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - Elementsian Government</title>
+    <title>Terms of Use - Elementsian Government</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="loader.css">
     <link rel="stylesheet" href="footer.css">
@@ -100,24 +100,16 @@
         </nav>
 
         <div class="page-content">
-            <h1>Privacy Policy</h1>
-            <p>Welcome to our Privacy Policy page. Here we explain how we collect, use, and protect your information.</p>
-            <h2><i class="fas fa-user-secret"></i> Information We Collect</h2>
-            <ul>
-                <li><i class="fas fa-id-badge"></i> Personal identification information (Name, email address, phone number, etc.)</li>
-                <li><i class="fas fa-chart-line"></i> Usage data (pages visited, time spent on the site, etc.)</li>
-            </ul>
-            <h2><i class="fas fa-cogs"></i> How We Use Your Information</h2>
-            <ul>
-                <li><i class="fas fa-cogs"></i> To provide and maintain our services</li>
-                <li><i class="fas fa-bell"></i> To notify you about changes to our services</li>
-                <li><i class="fas fa-headset"></i> To provide customer support</li>
-                <li><i class="fas fa-chart-pie"></i> To gather analysis or valuable information to improve our services</li>
-            </ul>
-            <h2><i class="fas fa-shield-alt"></i> Security of Your Information</h2>
-            <p>We value your trust in providing us your Personal Information, thus we strive to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and we cannot guarantee its absolute security.</p>
+            <h1>Terms of Use</h1>
+            <p>Welcome to our Terms of Use page. Please read these terms carefully before using our services.</p>
+            <h2><i class="fas fa-handshake"></i> Acceptance of Terms</h2>
+            <p>By accessing and using this website, you accept and agree to be bound by the terms and provision of this agreement. In addition, when using these particular services, you shall be subject to any posted guidelines or rules applicable to such services.</p>
+            <h2><i class="fas fa-edit"></i> Modification of Terms</h2>
+            <p>We reserve the right to modify these terms at any time. Your continued use of the site after any such changes constitutes your acceptance of the new terms.</p>
+            <h2><i class="fas fa-gavel"></i> Use of the Site</h2>
+            <p>You agree to use the site for lawful purposes only. You agree not to take any action that might compromise the security of the site, render the site inaccessible to others, or otherwise cause damage to the site or its content.</p>
             <h2><i class="fas fa-comments"></i> Contact Us</h2>
-            <p>If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at <a href="mailto:info@elementsia.gov"><i class="fas fa-envelope"></i> info@elementsia.gov</a>.</p>
+            <p>If you have any questions or suggestions about our Terms of Use, do not hesitate to contact us at <a href="mailto:info@elementsia.gov"><i class="fas fa-envelope"></i> info@elementsia.gov</a>.</p>
         </div>
 
         <footer class="site-footer">
@@ -146,3 +138,4 @@
     </script>
 </body>
 </html>
+``
