--- a/manifesto.html
+++ b/manifesto.html
@@ -254,7 +254,7 @@
                     </div>
                     <ul class="navbar-menu" id="navbar-menu">
                         <li class="navbar-item">
-                            <a href="index.html"><i class="fas fa-home"></i> Home</a>
+                            <a href="main.html"><i class="fas fa-home"></i> Home</a>
                         </li>
                         <li class="navbar-item">
                             <a href="#"><i class="fas fa-info-circle"></i> About</a>
